Add route for generating stems
